--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -366,4 +366,9 @@ Vorresti autenticarti ora?</string>
 Caratteri e campi creati manualmente o importati tramite CSV dovranno essere esportati tramite formato CSV.</string>
     <string name="brapi_info_title">Informazioni sulla sincronizzazione BrAPI</string>
     <string name="brapi_auth_btn">Accedi al sito</string>
+
+    <string name="gos_base_url">URL di Gos</string>
+    <string name="gos_base_url_default">www.mingleadgene.com</string>
+    <string name="gos_base_url_desc">L\'URL di base per il server Gos collegato</string>
+    <string name="gos_authorize">Autorizza Gos</string>
 </resources>
