--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,6 +109,7 @@
     <string name="traits_format_barcode">Barcode</string>
     <string name="traits_format_labelprint">Zebra Label Print</string>
     <string name="traits_format_usb_camera">Usb Camera</string>
+    <string name="traits_format_go_pro_camera">go pro</string>
 
     <string name="traits_create_trait">Trait</string>
     <string name="traits_create_format">Format</string>
@@ -789,4 +790,15 @@
     <string name="preferences_sound_delete_obs_description">Notification sound when observation is deleted in Collect activity.</string>
     <string name="file_already_exists">File already exists.</string>
     <string name="menu_action_brapi_pref_title">Authorize BrAPI</string>
+    <string name="go_pro_frag_connect_btn_content_description">Connect to a GoPro camera.\n</string>
+    <string name="trait_go_pro_capture_content_description">Capture a picture from a connected GoPro device.\n</string>
+    <string name="trait_go_pro_capture_button_text">Capture\n</string>
+    <string name="trait_go_pro_await_device_title">Scanning for GoPros</string>
+    <string name="trait_go_pro_await_ble_title">Awaiting GoPro BLE Connection</string>
+    <string name="trait_go_pro_await_ble_message">Communicating with GoPro BLE, this may take a minute.</string>
+    <string name="trait_go_pro_await_ap_title">Awaiting GoPro AP</string>
+    <string name="trait_go_pro_await_ap_message">Connecting to network, this may take a minute. \n SSID: %s \n Pass: %s</string>
+    <string name="trait_go_pro_await_ap_neutral">Manual Connect</string>
+    <string name="trait_go_pro_camera_delete_photo_title">Delete Photo</string>
+    <string name="go_pro_layout_black_11_not_detected">This trait was made for a GoPro Black 11, please contact developers to implement your GoPro model.\n</string>
 </resources>
