fixed minor problems added translatable text added styles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -790,4 +790,5 @@
     <string name="preferences_sound_delete_obs_description">Notification sound when observation is deleted in Collect activity.</string>
     <string name="file_already_exists">File already exists.</string>
     <string name="menu_action_brapi_pref_title">Authorize BrAPI</string>
+    <string name="util_version_checker_progress_message">Downloading install file…</string>
 </resources>
