--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -791,4 +791,8 @@
     <string name="file_already_exists">File already exists.</string>
     <string name="menu_action_brapi_pref_title">Authorize BrAPI</string>
     <string name="util_version_checker_progress_message">Downloading install file…</string>
+    <string name="util_version_checker_update_check">Update Check</string>
+    <string name="util_version_checker_update_text">Update</string>
+    <string name="util_version_checker_update_check_message">New version available: %s</string>
+    <string name="util_version_checker_up_to_date">Field Book is up to date.</string>
 </resources>
