--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -795,4 +795,6 @@
     <string name="util_version_checker_update_text">Update</string>
     <string name="util_version_checker_update_check_message">New version available: %s</string>
     <string name="util_version_checker_up_to_date">Field Book is up to date.</string>
+    <string name="act_config_search_fab_content_description">Search all plots and fields to load/navigate to the barcoded item.</string>
+    <string name="act_collect_plot_with_code_not_found">Barcode not found.\n</string>
 </resources>
