--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -229,12 +229,10 @@
     <string name="about_title_other_apps">其它表型软件</string>
     <string name="about_project_lead_title">项目指挥</string>
     <string name="about_contributors_title">贡献者</string>
-    <string name="about_contributors_developers_title">开发者</string>
-    <string name="about_translators_title">翻译着</string>
     <string name="about_contributors_funding_title">经费支持</string>
     <string name="about_rate">评价这个软件</string>
     <string name="changelog_title">更改记录</string>
-    <string name="libraries_title">函数库</string>
+    <string name="about_libraries_title">函数库</string>
     <!-- Profile dialog -->
     <string name="profile_person">采集者</string>
     <string name="profile_reset">清除设置</string>
@@ -252,7 +250,6 @@
     <!-- Import dialog -->
     <string name="import_source_local">本地存储</string>
     <string name="import_source_cloud">云端存储</string>
-    <string name="import_source_brapi">BrAPI</string>
     <string name="import_source_ask">总是询问</string>
     <string name="import_dialog_title_fields">导入地块</string>
     <string name="import_dialog_title_traits">导入性状</string>
@@ -322,7 +319,6 @@
     <string name="brapi_auth_deny">BrAPI授权被拒绝</string>
     <string name="brapi_auth_error_starting">启动BrAPI授权出错</string>
     <string name="brapi_btn_auth_summary">BrAPI当前的授权价格是 %1$s</string>
-    <string name="brapi_base_url_default">https://test-server.brapi.org</string>
     <string name="brapi_load_data_button">载入地块</string>
     <string name="brapi_load_traits_button">载入性状</string>
     <string name="brapi_save_data_button">保存地块</string>
