--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -229,13 +229,11 @@
     <string name="about_title_other_apps">Otras PhenoApps</string>
     <string name="about_project_lead_title">Líder del Projecto</string>
     <string name="about_contributors_title">Colaboradores</string>
-    <string name="about_contributors_developers_title">Desarrolladores</string>
-    <string name="about_translators_title">Traductores</string>
     <string name="about_contributors_funding_title">Fuente de financiamiento</string>
     <string name="about_rate">Califica esta app</string>
     <string name="about_technical_title">Detalles Tecnicos</string>
     <string name="changelog_title">Registro de Cambios</string>
-    <string name="libraries_title">Bibliotecas</string>
+    <string name="about_libraries_title">Bibliotecas</string>
     <!-- Profile dialog -->
     <string name="profile_person">Usuario</string>
     <string name="profile_reset">Borrar ajustes</string>
@@ -253,7 +251,6 @@
     <!-- Import dialog -->
     <string name="import_source_local">Almacenamiento local</string>
     <string name="import_source_cloud">Almacenamiento en la nube</string>
-    <string name="import_source_brapi">BrAPI</string>
     <string name="import_source_ask">Preguntar siempre</string>
     <string name="import_dialog_title_fields">Importar campo</string>
     <string name="import_dialog_title_traits">Importar variables</string>
@@ -324,7 +321,6 @@
     <string name="brapi_auth_error_starting">Error al iniciar la autenticación BrAPI</string>
     <string name="brapi_auth_permission_deny">ERROR: no tiene los permisos necesarios para el sistema especificado.</string>
     <string name="brapi_btn_auth_summary">Brapi está actualmente autorizado con %1$s</string>
-    <string name="brapi_base_url_default">https://test-server.brapi.org</string>
     <string name="brapi_load_data_button">Cargar Campos</string>
     <string name="brapi_load_traits_button">Cargar Variables</string>
     <string name="brapi_save_data_button">Salvar Campo</string>
