--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -229,13 +229,11 @@
     <string name="about_title_other_apps">Altre PhenoApps</string>
     <string name="about_project_lead_title">Responsabile del progetto</string>
     <string name="about_contributors_title">Contributori</string>
-    <string name="about_contributors_developers_title">Sviluppatori</string>
-    <string name="about_translators_title">Traduttori</string>
     <string name="about_contributors_funding_title">Finanziamenti</string>
     <string name="about_rate">Valuta questa app</string>
     <string name="about_technical_title">Dettagli Tecnici</string>
     <string name="changelog_title">Diario di modifiche</string>
-    <string name="libraries_title">Biblioteche</string>
+    <string name="about_libraries_title">Biblioteche</string>
     <!-- Profile dialog -->
     <string name="profile_person">Utente</string>
     <string name="profile_reset">Cancella impostazioni</string>
@@ -253,7 +251,6 @@
     <!-- Import dialog -->
     <string name="import_source_local">Memoria locale</string>
     <string name="import_source_cloud">Cloud storage</string>
-    <string name="import_source_brapi">BrAPI</string>
     <string name="import_source_ask">Chiedi sempre</string>
     <string name="import_dialog_title_fields">Importa campo</string>
     <string name="import_dialog_title_traits">Importa caratteri</string>
@@ -323,7 +320,6 @@
     <string name="brapi_auth_deny">Autorizzazione BrAPI negata</string>
     <string name="brapi_auth_error_starting">Errore durante l\'avvio dell\'autenticazione BrAPI</string>
     <string name="brapi_btn_auth_summary">Brapi è attualmente autorizzato con %1$s</string>
-    <string name="brapi_base_url_default">https://test-server.brapi.org</string>
     <string name="brapi_load_data_button">Carica Campi</string>
     <string name="brapi_load_traits_button">Carica Caratteri</string>
     <string name="brapi_save_data_button">Salva Campo</string>
