--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -229,13 +229,11 @@
     <string name="about_title_other_apps">他のPhenoAppsについて</string>
     <string name="about_project_lead_title">プロジェクトリーダー</string>
     <string name="about_contributors_title">貢献者</string>
-    <string name="about_contributors_developers_title">開発者</string>
-    <string name="about_translators_title">翻訳者</string>
     <string name="about_contributors_funding_title">資金</string>
     <string name="about_rate">このアプリを評価</string>
     <string name="about_technical_title">技術的詳細1</string>
     <string name="changelog_title">変更履歴</string>
-    <string name="libraries_title">ライブラリー</string>
+    <string name="about_libraries_title">ライブラリー</string>
     <!-- Profile dialog -->
     <string name="profile_person">調査員</string>
     <string name="profile_reset">設定の消去</string>
@@ -253,7 +251,6 @@
     <!-- Import dialog -->
     <string name="import_source_local">ローカル領域</string>
     <string name="import_source_cloud">クラウド領域</string>
-    <string name="import_source_brapi">BrAPI</string>
     <string name="import_source_ask">常に尋ねる</string>
     <string name="import_dialog_title_fields">圃場のインポート</string>
     <string name="import_dialog_title_traits">形質のインポート</string>
@@ -323,7 +320,6 @@
     <string name="brapi_auth_deny">BrAPI認証拒否</string>
     <string name="brapi_auth_error_starting">BrAPI認証開始エラー</string>
     <string name="brapi_btn_auth_summary">BrAPIは%1$sに認証されます。</string>
-    <string name="brapi_base_url_default">https://test-server.brapi.org</string>
     <string name="brapi_load_data_button">圃場のロード</string>
     <string name="brapi_load_traits_button">形質のロード</string>
     <string name="brapi_save_data_button">圃場の保存</string>
