--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -29,8 +29,7 @@
     <string name="main_toolbar_moveto">Ir a ID</string>
     <string name="main_toolbar_barcode_scan">Escanear codigo de barras</string>
     <string name="main_toolbar_moveto_scan">Escanear</string>
-    <string name="main_infobar_title">InfoBar</string>
-    <string name="main_barcode_text">Escanear código de barras</string>
+    <string name="barcode_scanner_text">Escanear código de barras</string>
     <!-- Fields Activity  -->
     <string name="fields_delete_study">Eliminar campo</string>
     <string name="fields_delete_study_confirmation">¿Estás seguro(a) de que quieres eliminar este campo? Esto eliminará todos los datos de este campo.</string>
@@ -313,14 +312,11 @@
     <string name="brapi_base_url">URL base</string>
     <string name="brapi_base_url_desc">La URL base para el servidor conectado por BrAPI</string>
     <string name="brapi_save_authorize">Salvar y Autorizar</string>
-    <string name="brapi_authorize">Autorizar BrAPI</string>
-    <string name="brapi_reauthorize">Reautorizar</string>
     <string name="brapi_revoke_auth">Cerrar sesión</string>
     <string name="brapi_auth_success">Autorización por BrAPI exitosa</string>
     <string name="brapi_auth_deny">Autorización BrAPI denegada</string>
     <string name="brapi_auth_error_starting">Error al iniciar la autenticación BrAPI</string>
     <string name="brapi_auth_permission_deny">ERROR: no tiene los permisos necesarios para el sistema especificado.</string>
-    <string name="brapi_btn_auth_summary">Brapi está actualmente autorizado con %1$s</string>
     <string name="brapi_load_data_button">Cargar Campos</string>
     <string name="brapi_load_traits_button">Cargar Variables</string>
     <string name="brapi_save_data_button">Salvar Campo</string>
