--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -29,8 +29,7 @@
     <string name="main_toolbar_moveto">Vai a ID</string>
     <string name="main_toolbar_barcode_scan">Scansione codice a barre</string>
     <string name="main_toolbar_moveto_scan">Scansiona</string>
-    <string name="main_infobar_title">InfoBar</string>
-    <string name="main_barcode_text">Scansiona un codice a barre</string>
+    <string name="barcode_scanner_text">Scansiona un codice a barre</string>
     <!-- Fields Activity  -->
     <string name="fields_delete_study">Cancella campo</string>
     <string name="fields_delete_study_confirmation">Sei sicuro di voler cancellare questo campo? Verranno cancellati anche tutti i dati associati a questo campo.</string>
@@ -313,13 +312,10 @@
     <string name="brapi_base_url">URL di base</string>
     <string name="brapi_base_url_desc">L\'URL di base per il server BrAPI collegato</string>
     <string name="brapi_save_authorize">Salva e autorizza</string>
-    <string name="brapi_authorize">Autorizza BrAPI</string>
-    <string name="brapi_reauthorize">Autorizza nuovamente</string>
     <string name="brapi_revoke_auth">Disconnettersi</string>
     <string name="brapi_auth_success">Autorizzazione BrAPI riuscita</string>
     <string name="brapi_auth_deny">Autorizzazione BrAPI negata</string>
     <string name="brapi_auth_error_starting">Errore durante l\'avvio dell\'autenticazione BrAPI</string>
-    <string name="brapi_btn_auth_summary">Brapi è attualmente autorizzato con %1$s</string>
     <string name="brapi_load_data_button">Carica Campi</string>
     <string name="brapi_load_traits_button">Carica Caratteri</string>
     <string name="brapi_save_data_button">Salva Campo</string>
