--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -29,8 +29,7 @@
     <string name="main_toolbar_moveto">移動先ID</string>
     <string name="main_toolbar_barcode_scan">バーコード読取</string>
     <string name="main_toolbar_moveto_scan">読み取り</string>
-    <string name="main_infobar_title">インフォバー</string>
-    <string name="main_barcode_text">バーコードを読み取る</string>
+    <string name="barcode_scanner_text">バーコードを読み取る</string>
     <!-- Fields Activity  -->
     <string name="fields_delete_study">圃場を削除</string>
     <string name="fields_delete_study_confirmation">この圃場を削除してもよろしいでしょうか？この圃場の全てのデータが削除されます。</string>
@@ -313,13 +312,10 @@
     <string name="brapi_base_url">の基本URL</string>
     <string name="brapi_base_url_desc">BrAPIサーバー接続のための基本URL</string>
     <string name="brapi_save_authorize">保存と認証</string>
-    <string name="brapi_authorize">BrAPI認証</string>
-    <string name="brapi_reauthorize">再認証</string>
     <string name="brapi_revoke_auth">ログアウト</string>
     <string name="brapi_auth_success">BrAPI認証成功</string>
     <string name="brapi_auth_deny">BrAPI認証拒否</string>
     <string name="brapi_auth_error_starting">BrAPI認証開始エラー</string>
-    <string name="brapi_btn_auth_summary">BrAPIは%1$sに認証されます。</string>
     <string name="brapi_load_data_button">圃場のロード</string>
     <string name="brapi_load_traits_button">形質のロード</string>
     <string name="brapi_save_data_button">圃場の保存</string>
