--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -230,19 +230,17 @@
     <string name="preferences_general_skip_entries_disabled">Disabled</string>
     <string name="preferences_general_share_disable">Disable file sharing</string>
     <string name="preferences_general_share_disable_description">When files are exported, the share dialog will not be displayed</string>
-<!--    <string name="preferences_general_barcode_camera">Move to entry via barcode</string>-->
-<!--    <string name="preferences_general_barcode_camera_description">Scan barcode and move to the specific entry</string>-->
     <string name="preferences_general_feature_next_missing">Next entry with no data</string>
     <string name="preferences_general_feature_next_missing_description">Adds a button to the toolbar that jumps to the next entry with no data depending on settings.</string>
     <string name="preferences_general_feature_barcode_text">Move to unique identifier</string>
-    <string name="preferences_general_feature_barcode_text_description">Adds a button to the toolbar to move to specific entry by text or barcode scan depending on settings.</string>
+    <string name="preferences_general_feature_barcode_text_description">Adds a button to the toolbar to move to a specific entry by its unique id. Uses text entry and/or camera barcode scan depending on settings.</string>
     <string name="preferences_general_feature_datagrid">Datagrid</string>
     <string name="preferences_general_feature_datagrid_description">Displays a spreadsheet of plots and traits showing collected data</string>
 
     <!-- move to unique id preference -->
     <string name="move_to_unique_id_disabled">Off</string>
-    <string name="pref_general_move_to_unique_id_text_entry">Text Entry</string>
-    <string name="pref_general_move_to_unique_id_camera_scan">Camera Barcode Scanner</string>
+    <string name="move_to_unique_id_text_or_scan">Text Entry or Scan</string>
+    <string name="move_to_unique_id_direct_camera_scan">Direct Camera Scan</string>
 
     <string name="preferences_general_system_title">System Defaults</string>
     <string name="preferences_general_files_base_directory_title">Define storage location</string>
