fix changed string id

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -473,7 +473,7 @@
     <string name="pref_general_location_collection_summary_obs">A location will be collected for every phenotype that is collected.</string>
     <string name="pref_general_location_collection_obs_dialog_title">This setting may substantially increase battery consumption.</string>
 
-    <string name="preferences_general_collect_tools">Collect Tools</string>
+    <string name="preferences_general_collect_tools">Collect Toolbar</string>
 
     <string name="preferences_general_feature_next_missing">Next entry with no data</string>
     <string name="preferences_general_feature_next_missing_description">Adds a button to the toolbar that jumps to the next entry with no data depending on settings.</string>
