--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -575,7 +575,7 @@
     <string name="preferences_behavior_cycle_traits">Cycling traits advances entry</string>
     <string name="preferences_behavior_cycle_traits_description">After going through all traits, Field Book goes to the next entry</string>
 
-    <string name="preferences_behavior_volume_buttons_navigate">Map volume keys to trait or entry navigation</string>
+    <string name="preferences_behavior_volume_buttons_navigate">Map volume keys to trait or entry arrows</string>
     <string name="preferences_behavior_volume_buttons_navigate_description">Volume keys duplicate selected navigation type</string>
     <string name="preferences_behavior_volume_buttons_navigate_traits_description">Volume keys duplicate trait navigation arrows</string>
     <string name="preferences_behavior_volume_buttons_navigate_entries_description">Volume keys duplicate entry navigation arrows</string>
