--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -407,6 +407,17 @@
     <string name="activity_collect_geomagnetic_noise_detected">Interference detected, the compass might not be accurate</string>
     <string name="dialog_geonav_collect_neutral_reconnect">Reconnect</string>
 
+    <string name="dialog_geonav_collect_title">GeoNav Configuration</string>
+    <string name="dialog_geonav_collect_auto_navigate">Auto Navigate</string>
+    <string name="dialog_geonav_collect_notify_on_precision_loss">Audio on precision drop</string>
+    <string name="dialog_geonav_collect_precision_threshold_title">Degree of precision</string>
+    <string name="dialog_geonav_collect_reconnect">Reconnect</string>
+    <string name="dialog_geonav_collect_reset_start_toast_message">Resetting connection…</string>
+    <string name="dialog_geonav_collect_reset_end_toast_message">Connection reset</string>
+
+    <string name="dialog_geonav_precision_loss_title">Location Precision Loss</string>
+    <string name="dialog_geonav_precision_loss_msg">Your preferred precision has been lost.</string>
+
     <!--- Content Descriptions -->
     <string name="view_trait_box_right_content_description">Go to next trait.</string>
     <string name="view_trait_box_left_content_description">Go to previous trait.</string>
